# cesium-python

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
cmake/: Dependencies.cmake
csrc/: CMakeLists.txt
csrc/CesiumNative/: AsyncBindings.cpp  Bindings.cpp  BindingsRegistry.h  CMakeLists.txt  ClientCommonBindings.cpp  CurlBindings.cpp  FutureTemplates.h  GeometryBindings.cpp  GeospatialBindings.cpp  GltfBindings.cpp  GltfContentBindings.cpp  GltfReaderBindings.cpp  GltfWriterBindings.cpp  HttpHeaderConversions.h  ITwinClientBindings.cpp  IonClientBindings.cpp  JsonConversions.h  JsonReaderBindings.cpp  JsonWriterBindings.cpp  NumpyConversions.h  PropertyTableConversions.h  PybindCommon.h  QuantizedMeshTerrainBindings.cpp  RasterOverlaysBindings.cpp  ResponseTemplates.h  Tiles3dBindings.cpp  Tiles3dContentBindings.cpp  Tiles3dReaderBindings.cpp  Tiles3dSelectionBindings.cpp  Tiles3dWriterBindings.cpp  UtilityBindings.cpp  VectorDataBindings.cpp  ZipArchive.cpp  ZipArchive.h
python/cesium/: __init__.py  __init__.pyi  async_.py  async_.pyi  curl.py  curl.pyi  geometry.py  geometry.pyi  geospatial.py  geospatial.pyi  quantized_mesh_terrain.py  quantized_mesh_terrain.pyi  raster_overlays.py  raster_overlays.pyi  utility.py  utility.pyi  vector_data.py  vector_data.pyi
python/cesium/client/: __init__.py  common.py  common.pyi  ion.py  ion.pyi  itwin.py  itwin.pyi
python/cesium/gltf/: __init__.py  __init__.pyi  content.py  content.pyi  reader.py  reader.pyi  writer.py  writer.pyi
python/cesium/json/: __init__.py  reader.py  reader.pyi  writer.py  writer.pyi
python/cesium/tiles/: __init__.py  __init__.pyi  content.py  content.pyi  reader.py  reader.pyi  selection.py  selection.pyi  writer.py  writer.pyi
scripts/: clang_format.ps1
