[build-system]
requires = ["scikit-build-core", "pybind11", "pathspec>=0.11.2"]
build-backend = "scikit_build_core.build"

[project]
name = "cesium-python"
version = "0.1.0"
description = "Python bindings for the Cesium Native C++ SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["extern"]

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
cmake.source-dir = "."
wheel.packages = ["python/cesium"]
sdist.include = ["MANIFEST.in"]

[tool.scikit-build.cmake.define]
CMAKE_PREFIX_PATH = "{build_dir}"

# Windows: use VS x64 generator
[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.args = ["-A", "x64", "-T", "host=x64"]